@@ -1,0 +1,2 @@
+spec/*.log
+spec/db/*.db
