@@ -1,14 +1,12 @@
 Dependencies.load_paths << Rails.root + '/app/presenters'
 
 config.after_initialize do
-  if defined? :Engines
-    Rails.plugins.each do |plugin|
-      path = Rails.root + "/vendor/plugins/#{plugin.name}/app/presenters"
-    
-      if File.directory?(path)
-        Dependencies.load_paths << path
-        ActionPresenter.view_paths << path
-      end
+  Rails.plugins.each do |plugin|
+    path = Rails.root + "/vendor/plugins/#{plugin.name}/app/presenters"
+  
+    if File.directory?(path)
+      Dependencies.load_paths << path
+      ActionPresenter.view_paths << path
     end
   end
-end
+end if defined? :Engines
