@@ -1,0 +1,1 @@
+<%= h article.body %>
